# Yandex_training

./: CMakeLists.txt
1.0/complexity_testing_special_cases/: A_Conditioner.cpp  B_Triangle.cpp  C_Phone_numbers.cpp  F_ArrangementLaptops.cpp  G_Details.cpp  H_Underground.cpp  I_Prisoner_castle_if.cpp
1.0/linear_search/: C_Nearest_number.cpp  D_More_your_neighbors.cpp  F2_Symmentric_sequence.cpp  F_Symmetric_sequence.cpp  G_Largest_product_two_numbers.cpp  H_Largest_product_three_nums.cpp  I_Sapper.cpp
1_Sets/: A_Amount_different_numbers.cpp  B_Intersection_sets.cpp  C_Cubs.cpp  D_Amount_words_from_text.cpp  E_OpenCalculator.cpp  F_Alien_genome.cpp
1_complexity_testing_special_cases/: D_Equation_root.cpp  E_Ambulance.cpp  J_System_linear_equations2.cpp
1_linear_search/: A_Is_list_growing.cpp  B_Determine_type_sequence.cpp  E_Cowcake_Throwing_Championship.cpp  J_Maxim_Triangle.cpp
3.0/final_sprint/: A_Underground_delivery.cpp
3.0/race/: 11_Stack_with_error_protection.cpp  12_Correct_bracket_sequence.cpp  13_Postfix_entry.cpp  14_Sorting_of_wagons_lite.cpp  16_Error_protected_queue.cpp  17_The_Drunkards_game.cpp  18_Deque_with_error_protection.cpp  19_Hipuy.cpp  20_HeapSort.cpp  21_Three_units_in_row.cpp  22_Grasshopper.cpp  23_Calculator.cpp  24_Ticket_purchase.cpp  25_Carnations.cpp  26_The_cheapest_way.cpp  27_Display_the_route_of_the_maximum_cost.cpp  28_Knigh_move.cpp  29_Cafe.cpp  30_NOP_with_response_recovery.cpp  31_DFS.cpp  32_Connectivity_components.cpp  33_Cheating.cpp  34_TopSort.cpp  35_Cycle_search.cpp  36_The_length_of_the_shortest_path.cpp  37_The_path_in_the_graph.cpp  38_Fleas.cpp  39_The_way_of_the_speleologist.cpp  40_Metro.cpp
3.0/warmup/: Amount_in_rectangle_9.cpp  Beautiful_string_2.cpp  Control_work_4.cpp  Good_string_5.cpp  Histogram_1.cpp  Lite_operating_systems_6.cpp  Minimum_rectangle_8.cpp
3_warmup/: Beautiful_string_2.cpp  Boring_lesson_10.cpp  Collector_Diego_3.cpp  SNTP_7.cpp
CodeRun/: 207_Stones _and_jewelry.cpp  244_Frequent_element.cpp  248_Unique_elements.cpp
Leetcode/: 1493_Longest_Subarray_Units_After_Removing_One_Element.cpp  228_Summary_Ranges .cpp  356_Line_Reflection.cpp  849_Maximize_Distance_to_Closest_Person.cpp
