cmake_minimum_required(VERSION 3.24)
project(yandex_training_algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(A_Conditioner 1_complexity_testing_special_cases/A_Conditioner.cpp)
add_executable(B_Triangle 1_complexity_testing_special_cases/B_Triangle.cpp)
add_executable(C_Phone_numbers 1_complexity_testing_special_cases/C_Phone_numbers.cpp)
add_executable(D_Equation_root 1_complexity_testing_special_cases/D_Equation_root.cpp)
add_executable(E_Ambulance 1_complexity_testing_special_cases/E_Ambulance.cpp)
add_executable(F_ArrangementLaptops 1_complexity_testing_special_cases/F_ArrangementLaptops.cpp)
add_executable(G_Details 1_complexity_testing_special_cases/G_Details.cpp)
add_executable(H_Underground 1_complexity_testing_special_cases/H_Underground.cpp)
add_executable(I_Prisoner_castle_if 1_complexity_testing_special_cases/I_Prisoner_castle_if.cpp)
add_executable(J_System_linear_equations2 1_complexity_testing_special_cases/J_System_linear_equations2.cpp)
add_executable(A_Is_list_growing 1_linear_search/A_Is_list_growing.cpp)
add_executable(B_Determine_type_sequence 1_linear_search/B_Determine_type_sequence.cpp)
add_executable(C_Nearest_number 1_linear_search/C_Nearest_number.cpp)
add_executable(D_More_your_neighbors 1_linear_search/D_More_your_neighbors.cpp)
add_executable(E_Cowcake_Throwing_Championship 1_linear_search/E_Cowcake_Throwing_Championship.cpp)
add_executable(F_Symmetric_sequence 1_linear_search/F_Symmetric_sequence.cpp)
add_executable(G_Largest_product_two_numbers 1_linear_search/G_Largest_product_two_numbers.cpp)
add_executable(H_Largest_product_three_nums 1_linear_search/H_Largest_product_three_nums.cpp)
add_executable(I_Sapper 1_linear_search/I_Sapper.cpp)
add_executable(J_Maxim_Triangle 1_linear_search/J_Maxim_Triangle.cpp)
add_executable(F2_Symmentric_sequence 1_linear_search/F2_Symmentric_sequence.cpp)
add_executable(Amount_different_numbers 1_Sets/A_Amount_different_numbers.cpp)
add_executable(B_Intersection_sets 1_Sets/B_Intersection_sets.cpp)
add_executable(C_Cubs 1_Sets/C_Cubs.cpp)
add_executable(D_Amount_words_from_text 1_Sets/D_Amount_words_from_text.cpp)
add_executable(E_OpenCalculator 1_Sets/E_OpenCalculator.cpp)
add_executable(F_Alien_genome 1_Sets/F_Alien_genome.cpp)

add_executable(A_Histogram 3_warmup/Histogram_1.cpp 3_warmup/Boring_lesson_10.cpp 3_warmup/Amount_in_rectangle_9.cpp)
add_executable(B_Beautiful_string 3_warmup/Beautiful_string_2.cpp)
add_executable(Boring_lesson_3 3_warmup/Boring_lesson_10.cpp)
add_executable(Amount_in_rectangle_9 3_warmup/Amount_in_rectangle_9.cpp)
add_executable(Minimum_rectangle_8 3_warmup/Minimum_rectangle_8.cpp)
add_executable(SNTP 3_warmup/SNTP_7.cpp)
add_executable(Lite_operating_systems_6 3_warmup/Lite_operating_systems_6.cpp)
add_executable(Good_string_5 3_warmup/Good_string_5.cpp)

add_executable(Control_work_4 3_warmup/Control_work_4.cpp)
add_executable(Collector_Diego_3 3_warmup/Collector_Diego_3.cpp)