cmake_minimum_required(VERSION 3.24)
project(yandex_training_algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(A_Conditioner 1.0/complexity_testing_special_cases/A_Conditioner.cpp)
add_executable(B_Triangle 1.0/complexity_testing_special_cases/B_Triangle.cpp)
add_executable(C_Phone_numbers 1.0/complexity_testing_special_cases/C_Phone_numbers.cpp)
add_executable(D_Equation_root 1.0/complexity_testing_special_cases/D_Equation_root.cpp)
add_executable(E_Ambulance 1.0/complexity_testing_special_cases/E_Ambulance.cpp)
add_executable(F_ArrangementLaptops 1.0/complexity_testing_special_cases/F_ArrangementLaptops.cpp)
add_executable(G_Details 1.0/complexity_testing_special_cases/G_Details.cpp)
add_executable(H_Underground 1.0/complexity_testing_special_cases/H_Underground.cpp)
add_executable(I_Prisoner_castle_if 1.0/complexity_testing_special_cases/I_Prisoner_castle_if.cpp)
add_executable(J_System_linear_equations2 1.0/complexity_testing_special_cases/J_System_linear_equations2.cpp)
add_executable(A_Is_list_growing 1.0/linear_search/A_Is_list_growing.cpp)
add_executable(B_Determine_type_sequence 1.0/linear_search/B_Determine_type_sequence.cpp)
add_executable(C_Nearest_number 1.0/linear_search/C_Nearest_number.cpp)
add_executable(D_More_your_neighbors 1.0/linear_search/D_More_your_neighbors.cpp)
add_executable(E_Cowcake_Throwing_Championship 1.0/linear_search/E_Cowcake_Throwing_Championship.cpp)
add_executable(F_Symmetric_sequence 1.0/linear_search/F_Symmetric_sequence.cpp)
add_executable(G_Largest_product_two_numbers 1.0/linear_search/G_Largest_product_two_numbers.cpp)
add_executable(H_Largest_product_three_nums 1.0/linear_search/H_Largest_product_three_nums.cpp)
add_executable(I_Sapper 1.0/linear_search/I_Sapper.cpp)
add_executable(J_Maxim_Triangle 1.0/linear_search/J_Maxim_Triangle.cpp)
add_executable(F2_Symmentric_sequence 1.0/linear_search/F2_Symmentric_sequence.cpp)
add_executable(Amount_different_numbers 1.0/Sets/A_Amount_different_numbers.cpp)
add_executable(B_Intersection_sets 1.0/Sets/B_Intersection_sets.cpp)
add_executable(C_Cubs 1.0/Sets/C_Cubs.cpp)
add_executable(D_Amount_words_from_text 1.0/Sets/D_Amount_words_from_text.cpp)
add_executable(E_OpenCalculator 1.0/Sets/E_OpenCalculator.cpp)
add_executable(F_Alien_genome 1.0/Sets/F_Alien_genome.cpp)

add_executable(Histogram_1 3.0/warmup/Histogram_1.cpp)
add_executable(Beautiful_string_2 3.0/warmup/Beautiful_string_2.cpp)
add_executable(Boring_lesson_10 3.0/warmup/Boring_lesson_10.cpp)
add_executable(Amount_in_rectangle_9 3.0/warmup/Amount_in_rectangle_9.cpp)
add_executable(Minimum_rectangle_8 3.0/warmup/Minimum_rectangle_8.cpp)
add_executable(SNTP 3.0/warmup/SNTP_7.cpp)
add_executable(Lite_operating_systems_6 3.0/warmup/Lite_operating_systems_6.cpp)
add_executable(Good_string_5 3.0/warmup/Good_string_5.cpp)

add_executable(Control_work_4 3.0/warmup/Control_work_4.cpp)
add_executable(Collector_Diego_3 3.0/warmup/Collector_Diego_3.cpp)