cmake_minimum_required(VERSION 3.24)
project(yandex_training_algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(A_Conditioner 1.0/complexity_testing_special_cases/A_Conditioner.cpp)
add_executable(B_Triangle 1.0/complexity_testing_special_cases/B_Triangle.cpp)
add_executable(C_Phone_numbers 1.0/complexity_testing_special_cases/C_Phone_numbers.cpp)
add_executable(D_Equation_root 1.0/complexity_testing_special_cases/D_Equation_root.cpp)
add_executable(E_Ambulance 1.0/complexity_testing_special_cases/E_Ambulance.cpp)
add_executable(F_ArrangementLaptops 1.0/complexity_testing_special_cases/F_ArrangementLaptops.cpp)
add_executable(G_Details 1.0/complexity_testing_special_cases/G_Details.cpp)
add_executable(H_Underground 1.0/complexity_testing_special_cases/H_Underground.cpp)
add_executable(I_Prisoner_castle_if 1.0/complexity_testing_special_cases/I_Prisoner_castle_if.cpp)
add_executable(J_System_linear_equations2 1.0/complexity_testing_special_cases/J_System_linear_equations2.cpp)
add_executable(A_Is_list_growing 1.0/linear_search/A_Is_list_growing.cpp)
add_executable(B_Determine_type_sequence 1.0/linear_search/B_Determine_type_sequence.cpp)
add_executable(C_Nearest_number 1.0/linear_search/C_Nearest_number.cpp)
add_executable(D_More_your_neighbors 1.0/linear_search/D_More_your_neighbors.cpp)
add_executable(E_Cowcake_Throwing_Championship 1.0/linear_search/E_Cowcake_Throwing_Championship.cpp)
add_executable(F_Symmetric_sequence 1.0/linear_search/F_Symmetric_sequence.cpp)
add_executable(G_Largest_product_two_numbers 1.0/linear_search/G_Largest_product_two_numbers.cpp)
add_executable(H_Largest_product_three_nums 1.0/linear_search/H_Largest_product_three_nums.cpp)
add_executable(I_Sapper 1.0/linear_search/I_Sapper.cpp)
add_executable(J_Maxim_Triangle 1.0/linear_search/J_Maxim_Triangle.cpp)
add_executable(F2_Symmentric_sequence 1.0/linear_search/F2_Symmentric_sequence.cpp)
add_executable(Amount_different_numbers 1.0/Sets/A_Amount_different_numbers.cpp)
add_executable(B_Intersection_sets 1.0/Sets/B_Intersection_sets.cpp)
add_executable(C_Cubs 1.0/Sets/C_Cubs.cpp)
add_executable(D_Amount_words_from_text 1.0/Sets/D_Amount_words_from_text.cpp)
add_executable(E_OpenCalculator 1.0/Sets/E_OpenCalculator.cpp)
add_executable(F_Alien_genome 1.0/Sets/F_Alien_genome.cpp)

add_executable(Histogram_1 3.0/warmup/Histogram_1.cpp)
add_executable(Beautiful_string_2 3.0/warmup/Beautiful_string_2.cpp)
add_executable(Boring_lesson_10 3.0/warmup/Boring_lesson_10.cpp)
add_executable(Amount_in_rectangle_9 3.0/warmup/Amount_in_rectangle_9.cpp)
add_executable(Minimum_rectangle_8 3.0/warmup/Minimum_rectangle_8.cpp)
add_executable(SNTP 3.0/warmup/SNTP_7.cpp)
add_executable(Lite_operating_systems_6 3.0/warmup/Lite_operating_systems_6.cpp)
add_executable(Good_string_5 3.0/warmup/Good_string_5.cpp)

add_executable(Control_work_4 3.0/warmup/Control_work_4.cpp)
add_executable(Collector_Diego_3 3.0/warmup/Collector_Diego_3.cpp)
add_executable(356_Line_Reflection Leetcode/356_Line_Reflection.cpp)
add_executable(849_Maximize_Distance_to_Closest_Person Leetcode/849_Maximize_Distance_to_Closest_Person.cpp)
add_executable(228_Summary_Ranges  "Leetcode/228_Summary_Ranges .cpp")
add_executable(244_Frequent_element CodeRun/244_Frequent_element.cpp)
add_executable(11_Stack_with_error_protection 3.0/race/11_Stack_with_error_protection.cpp)
add_executable(12_Correct_bracket_sequence 3.0/race/12_Correct_bracket_sequence.cpp)
add_executable(13_Postfix_entry 3.0/race/13_Postfix_entry.cpp)
add_executable(15_The_Great_Lineland_Migration 3.0/race/15_The_Great_Lineland_Migration.cpp)
add_executable(16_Error_protected_queue 3.0/race/16_Error_protected_queue.cpp)
add_executable(21_Three_units_in_row 3.0/race/21_Three_units_in_row.cpp)
add_executable(17_The_Drunkards_game 3.0/race/17_The_Drunkards_game.cpp)
add_executable(18_Deque_with_error_protection 3.0/race/18_Deque_with_error_protection.cpp)
add_executable(20_HeapSort 3.0/race/20_HeapSort.cpp)
add_executable(22_Grasshopper 3.0/race/22_Grasshopper.cpp)
add_executable(23_Calculator 3.0/race/23_Calculator.cpp)
add_executable(24_Ticket_purchase 3.0/race/24_Ticket_purchase.cpp)
add_executable(25_Carnations 3.0/race/25_Carnations.cpp)
add_executable(26_The_cheapest_way 3.0/race/26_The_cheapest_way.cpp)

add_executable(27_Display_the_route_of_the_maximum_cost 3.0/race/27_Display_the_route_of_the_maximum_cost.cpp)
add_executable(28_Knigh_move 3.0/race/28_Knigh_move.cpp)
add_executable(29_Cafe 3.0/race/29_Cafe.cpp)
add_executable(30_NOP_with_response_recovery 3.0/race/30_NOP_with_response_recovery.cpp)
add_executable(31_DFS 3.0/race/31_DFS.cpp)
add_executable(32_Connectivity_components 3.0/race/32_Connectivity_components.cpp)
add_executable(33_Cheating 3.0/race/33_Cheating.cpp)
add_executable(35_TopSort 3.0/race/34_TopSort.cpp)
add_executable(35_Cycle_search 3.0/race/35_Cycle_search.cpp)
add_executable(36_The_length_of_the_shortest_path 3.0/race/36_The_length_of_the_shortest_path.cpp)
add_executable(37_The_path_in_the_graph 3.0/race/37_The_path_in_the_graph.cpp)
add_executable(38_Fleas 3.0/race/38_Fleas.cpp)
add_executable(39_The_way_of_the_speleologist 3.0/race/39_The_way_of_the_speleologist.cpp)
add_executable(40_Metro 3.0/race/40_Metro.cpp)
add_executable(A_Underground_delivery 3.0/final_sprint/A_Underground_delivery.cpp)